--- a/identity-service/src/main/resources/application.properties
+++ b/identity-service/src/main/resources/application.properties
@@ -3,7 +3,6 @@
 # -------------------------
 spring.data.mongodb.uri=mongodb://localhost:27017/identity_db
 
-# Which port the Spring Boot app runs on
 server.port=8081
 
 # -------------------------
@@ -12,13 +11,24 @@ server.port=8081
 jwt.issuer=identity-service
 jwt.access-token-validity-minutes=15
 jwt.refresh-token-validity-days=14
-jwt.key-pair.private-key-location=classpath:keys/private_key.pem
+jwt.key-pair. private-key-location=classpath:keys/private_key.pem
 jwt.key-pair.public-key-location=classpath:keys/public_key.pem
+
+# -------------------------
+# ? Cookie Configuration
+# -------------------------
+cookie.domain=localhost
+cookie.secure=false
+
+# -------------------------
+# ? CORS Configuration
+# -------------------------
+cors.allowed-origins=http://localhost:3000
 
 # -------------------------
 # Scheduler Configuration
 # -------------------------
-spring. task.scheduling.enabled=true
+spring.task.scheduling.enabled=true
 spring.task.scheduling.pool.size=2
 spring.task.scheduling.thread-name-prefix=scheduler-
 
@@ -26,5 +36,5 @@ spring.task.scheduling.thread-name-prefix=scheduler-
 # Logging Configuration
 # -------------------------
 logging.level.root=INFO
-logging.level.com.company.identity.scheduler=DEBUG
+logging.level.com.instagram. identity=DEBUG
 logging.level.org.springframework.security=DEBUG
