--- a/identity-service/src/main/resources/application.properties
+++ b/identity-service/src/main/resources/application.properties
@@ -1,40 +1,53 @@
-# -------------------------
-# MongoDB Configuration
-# -------------------------
-spring.data.mongodb.uri=mongodb://localhost:27017/identity_db
-
+# ========================================
+# APPLICATION CONFIGURATION
+# ========================================
+spring.application.name=identity-service
 server.port=8081
 
-# -------------------------
+# ========================================
+# MongoDB Configuration
+# ========================================
+spring.data.mongodb.uri=mongodb://localhost:27017/identity_db
+
+# ========================================
 # JWT Configuration
-# -------------------------
+# ========================================
 jwt.issuer=identity-service
 jwt.access-token-validity-minutes=15
 jwt.refresh-token-validity-days=14
 jwt.key-pair.private-key-location=classpath:keys/private_key.pem
 jwt.key-pair.public-key-location=classpath:keys/public_key.pem
 
-# -------------------------
+# ========================================
 # Cookie Configuration
-# -------------------------
+# ========================================
 cookie.domain=localhost
 cookie.secure=false
 
-# -------------------------
+# ========================================
 # CORS Configuration
-# -------------------------
+# ========================================
 cors.allowed-origins=http://localhost:3000
 
-# -------------------------
+# ========================================
 # Scheduler Configuration
-# -------------------------
+# ========================================
 spring.task.scheduling.enabled=true
 spring.task.scheduling.pool.size=2
 spring.task.scheduling.thread-name-prefix=scheduler-
+# ========================================
+# EUREKA CLIENT CONFIGURATION
+# ========================================
+# ? FIXED: Include authentication credentials in URL
+eureka.client.service-url.defaultZone=http://admin:admin123@localhost:8761/eureka/
 
-# -------------------------
+eureka.instance.prefer-ip-address=true
+eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.instance.instance-id=${spring.application.name}: ${server.port}
+
+# ========================================
 # Logging Configuration
-# -------------------------
+# ========================================
 logging.level.root=INFO
 logging.level.com.instagram.identity=DEBUG
 logging.level.org.springframework.security=DEBUG
