--- a/profile-service/src/main/resources/application.properties
+++ b/profile-service/src/main/resources/application.properties
@@ -26,3 +26,10 @@ cors.allowed-origins=http://localhost:3000
 logging.level.root=INFO
 logging.level.com.instagram.profile=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# ========================================
+# EUREKA CLIENT CONFIGURATION
+# ========================================
+eureka.client.service-url.defaultZone=http://admin:admin123@localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.lease-renewal-interval-in-seconds=10
